frontend.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: frontend
  namespace: aurora
spec:
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: "hiring-frontend:latest"
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
      imagePullSecrets:
      - name: regcred
---
apiVersion: v1
kind: Service
metadata: 
  name: frontend
  namespace: aurora
spec:
  ports:
  - port: 80
    targetPort: 80
    nodePort: 30018
    protocol: TCP
  type: NodePort
  selector:
    app: frontend
