ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api
            backend:
              serviceName: api
              servicePort: 8081
          - path: /
            frontend:
              serviceName: frontend
              servicePort: 8081
